--- a/src/main/resources/templates/tabla.html
+++ b/src/main/resources/templates/tabla.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
 
-    <h1>Lista de Vacantes</h1>
+    <h1 class="text-primary">Lista de Vacantes</h1>
 
-    <table>
-        <caption>Contact Information</caption>
+    <table class="table " >
+        <caption>Contact </caption>
         <tr>
             <th scope="col">Id</th>
             <th scope="col">Nombre</th>
@@ -23,7 +24,7 @@
 
         </tr>
         <tr th:each="vacante : ${vacantes}">
-            <td>[[${vacante.id}]]</td>
+            <td> [[${vacante.id}]]</td>
             <td>[[${vacante.name}]]</td>
 
             <td>[[${vacante.date}]]</td>
@@ -33,6 +34,7 @@
 
         </tr>
     </table>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     
 </body>
 </html>
