--- a/src/main/resources/templates/tabla.html
+++ b/src/main/resources/templates/tabla.html
@@ -1,40 +1,59 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th='http://www.thymeleaf.org' >
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-</head>
-<body>
-
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
     <h1 class="text-primary">Lista de Vacantes</h1>
 
-    <table class="table " >
-        <caption>Contact </caption>
-        <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Nombre</th>
-            <th scope="col">fecha de publicacion</th>
-            <th scope="col">salario </th>
-            <th scope="col">descripcion</th>
+    <table class="table">
+      <caption>
+        Contact
+      </caption>
+      <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">fecha de publicacion</th>
+        <th scope="col">salario</th>
+        <th scope="col">descripcion</th>
+        <th scope="col">detalle</th>
+        <th scope="col">Borrar</th>
+      </tr>
+      <tr th:each="vacante : ${vacantes}">
+        <td>[[${vacante.id}]]</td>
+        <td>[[${vacante.name}]]</td>
 
+        <td>[[${vacante.date}]]</td>
+        <td>[[${vacante.wage}]]</td>
+        <td>[[${vacante.description}]]</td>
+        <td>
+          <a
+        
+            
+            class="btn btn-primary"
+            th:href="@{/vacantes/view/{id}  (id=${vacante.id})}"
+            role="button"
+            >Detalles</a
+          >
+        </td>
 
-
-
-        </tr>
-        <tr th:each="vacante : ${vacantes}">
-            <td> [[${vacante.id}]]</td>
-            <td>[[${vacante.name}]]</td>
-
-            <td>[[${vacante.date}]]</td>
-            <td>[[${vacante.wage}]]</td>
-            <td>[[${vacante.description}]]</td>
-
-
-        </tr>
+        <td>
+            <a  id="" class="btn btn-danger" href="#" role="button">Borrar</a>
+        </td>        
+      </tr>
     </table>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    
-</body>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
