--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,26 +1,39 @@
-<!doctype html>
-<html lang="en" xmlns:th='http://www.thymeleaf.org' >
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="icon" href="favicon.ico" />
 
     <title>EmpleosApp | Aplicación para publicar Ofertas de Trabajo.</title>
     <!-- Bootstrap core CSS -->
-    <link th:href="@{/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/bootstrap/css/bootstrap.min.css}" rel="stylesheet" />
     <!-- Custom styles for this template -->
-    <link th:href="@{bootstrap/css/jumbotron.css}" rel="stylesheet">
-    <link th:href="@{bootstrap/css/sticky-footer-navbar.css}" rel="stylesheet">
+    <link th:href="@{bootstrap/css/jumbotron.css}" rel="stylesheet" />
+    <link
+      th:href="@{bootstrap/css/sticky-footer-navbar.css}"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="#">EmpleosApp</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarsExampleDefault"
+          aria-controls="navbarsExampleDefault"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -34,8 +47,8 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Menu 2</a>
-            </li>          
-          </ul>  
+            </li>
+          </ul>
           <a class="btn btn-primary" href="#">Ingresar</a>&nbsp;
           <a class="btn btn-primary" href="#">Registrarse</a>
         </div>
@@ -43,43 +56,64 @@
     </header>
 
     <main role="main">
-
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <div class="container">
           <h3>Encuentra el trabajo que andas buscando.</h3>
           Puedes buscar por descripción y categoría.
           <form class="form-inline">
-            <input type="text" class="form-control mb-3" id="exampleFormControlInput1" placeholder="Escriba una búsqueda">&nbsp;
+            <input
+              type="text"
+              class="form-control mb-3"
+              id="exampleFormControlInput1"
+              placeholder="Escriba una búsqueda"
+            />&nbsp;
             <select class="custom-select custom-select mb-3">
               <option selected>Seleccione una categoría</option>
               <option value="1">Ventas</option>
               <option value="2">Contabilidad</option>
               <option value="3">Transporte</option>
               <option value="4">Informática</option>
-              <option value="5">Construcción</option>
-            </select>&nbsp;
+              <option value="5">Construcción</option></select
+            >&nbsp;
             <button type="submit" class="btn btn-primary mb-3">Buscar</button>
           </form>
         </div>
       </div>
-      <hr>
+      <hr />
 
-      <div class="container"> 
+      <div class="container">
         <h2 class="font-weight-bold text-center text-capitalize">DESTACADOS</h2>
-        <hr>
-        <div th:each="vacantes: ${vacantes}" class="row">
-          <div class="col-md-3">            
-            <img class="rounded mx-auto d-block" th:src="@{/images/{img} (img=${vacantes.image})}" alt="Generic placeholder image" width="220" height="220">            
+        <hr />
+        <div th:each="vacante: ${vacantes}" class="row">
+          <div class="col-md-3">
+            <img
+              class="rounded mx-auto d-block"
+              th:src="@{/images/{img} (img=${vacante.image})}"
+              alt="Generic placeholder image"
+              width="220"
+              height="220"
+            />
           </div>
           <div th:for class="col-md-9">
             <h2>Arquitecto</h2>
-            <h6 class="card-title"><strong>Categoría: </strong> <span>[[${vacantes.name}]]</span></h6>
-            <h6 class="card-title"><strong>Publicado: </strong> <span>[[${vacantes.date}]]</span></h6>                
-            <p>[[${vacantes.description}]]</p>
-            <p><a class="btn btn-secondary" href="" role="button">View details &raquo;</a></p>            
+            <h6 class="card-title">
+              <strong>Categoría: </strong> <span>[[${vacante.name}]]</span>
+            </h6>
+            <h6 class="card-title">
+              <strong>Publicado: </strong> <span>[[${vacante.date}]]</span>
+            </h6>
+            <p>[[${vacante.description}]]</p>
+            <p>
+              <a
+                class="btn btn-secondary"
+                th:href="@{/vacantes/view/{id} (id=${vacante.id})}"
+                role="button"
+                >View details &raquo;</a
+              >
+            </p>
           </div>
-        </div>  
+        </div>
         <!-- <div class="row">
           <div class="col-md-3">            
             <img class="rounded mx-auto d-block" th:src="@{images/logo2.png}" alt="Generic placeholder image" width="220" height="220">            
@@ -104,16 +138,17 @@
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
         </div>           -->
-		  <hr>	
-      </div> <!-- /container -->
-
+        <hr />
+      </div>
+      <!-- /container -->
     </main>
 
     <footer class="footer">
       <div class="container">
         <p>
-          &copy; 2019 EmpleosApp, Inc. | WebApp Desarrollada con Spring Boot 2.1.2 | Autor: Iv&aacute;n E. Tinajero D&iacute;az | &middot; <a href="#">Privacy</a>
-          &middot; <a href="#">Terms</a>
+          &copy; 2019 EmpleosApp, Inc. | WebApp Desarrollada con Spring Boot
+          2.1.2 | Autor: Iv&aacute;n E. Tinajero D&iacute;az | &middot;
+          <a href="#">Privacy</a> &middot; <a href="#">Terms</a>
         </p>
       </div>
     </footer>
@@ -125,5 +160,3 @@
     <script th:src="@{bootstrap/js/bootstrap.min.js}"></script>
   </body>
 </html>
-
-
